# task_vectors

./: .gitignore  README.md  environment.yml  find_best_hyperparam.py  merging_trend_eval.py  pyproject.toml  requirements.txt
src/: args.py  eval.py  finetune.py  heads.py  modeling.py  task_vectors.py  utils.py
src/datasets/: cars.py  cifar10.py  cifar100.py  common.py  dtd.py  eurosat.py  gtsrb.py  imagenet.py  mnist.py  registry.py  resisc45.py  stl10.py  sun397.py  svhn.py  templates.py
