[tool.poetry]
name = "task-vectors-ext"
version = "0.1.0"
description = "A project to investigate the extensions of task vectors."
authors = ["Reza Davari <rezazzr@hotmail.com>"]
readme = "README.md"
packages = [{include = "task_vectors_ext"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
poethepoet = "^0.21.1"
open-clip-torch = "2.0.2"
tqdm = "^4.65.0"
jupyter = "^1.0.0"
black = {extras = ["d"], version = "^23.7.0"}
wandb = "^0.15.8"
scipy = "^1.11.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
ray = {extras = ["tune"], version = "^2.6.3"}
optuna = "^3.3.0"
prettytable = "^3.9.0"
sklearn = "^0.0.post11"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
#force-cuda11 = "pip3 install torch==1.9.0+cu111 torchvision==0.10.0+cu111 torchaudio==0.9.0 -f https://download.pytorch.org/whl/torch_stable.html"